fix: corrige issues sonar de qualidade